2003-11-03  Michael Terry  <mterry@fastmail.fm>

	* same-gnome.c: Changed flood_fill() to work on the 0 color and thus
	the status bar will show that no stones are selected.

2003-10-30  Callum McKenzie  <callum@localhost.localdomain>

	* Makefile.am: Removed *_DISABLE_DEPRECATED.

2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Change the way gconf files are
	installed. This should improve things for people building outside
	the source tree. See bug #123192.

2003-08-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.schemas.in:
	* same-gnome.c: GConf return value checking. Also removed the
	nstones GConf key since it should be calculated from the theme.

2003-08-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/same-gnome.xml: Updated for 2.4, including screen-shots.

	* glass.png: Fixed corruption in the PNG stream. Mysteriously this
	actually reduced the size of the file by 10k.

2003-07-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.desktop.in: Update name to fit HIG (bug 116916).

2003-06-24  William Jon McCann  <mccann@jhu.edu>

	* same-gnome.c: #define gconf key names.  Convert to pixbufs so
	we are ready for tranparent background themes.
	(draw_ball): Fixed a nasty little off-by-one error that caused
	segfaults after converting to pixbufs.

2003-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c (main): Space at end of string fixes for i18n
	people.

2003-06-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c: More compile cleanups from Steve Chaplin.

2003-06-18  William Jon McCann  <mccann@jhu.edu>

	* same-gnome.c: Include string.h.

2003-06-17  William Jon McCann  <mccann@jhu.edu>

	* same-gnome.c: Fixed compiler warnings.

2003-06-16  William Jon McCann  <mccann@jhu.edu>

	* same-gnome.c (game_preferences_callback): Make current
	theme be selected in preferences dialog.

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>
